<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Updater</string>
    <string name="aboutApp">About the application:</string>
    <string name="about">About me</string>
    <string name="settings">Settings</string>
    <string name="header_ROMs">Download and install a ROM</string>
    <string name="header_patches">Download and install a patch</string>
    <string name="header_offline">Install a downloaded update</string>
    <string name="info_ROMs">If an update is found, it will be shown in the list. Select the wanted updater and pull the drawer on the bottom of the screen to see the changelog and install or download the update.</string>
    <string name="info_patches">These patches allow you to add some new functionalities to the ROM. If you use these patches, it\'s possible that you won\'t be able to use incremental updates. Moreover, these patches need to be installed after every new ROM install.</string>
    <string name="info_offline">If no options are shown, you don\'t have any installable zips on the updates folder, download some file or change the updates folder in \'Settings\'.</string>
    <string name="checkUpdate_button">Check updates</string>
    <string name="searchForPatches_button">Search for patches</string>
    <string name="lastVersion">Last available version:</string>
    <string name="applyUpdate">Apply</string>
    <string name="update">Update</string>
    <string name="downloading">Downloading...</string>
    <string name="downloadingUpdate">Downloading update</string>
    <string name="downloadComplete">File downloaded</string>
    <string name="searchingForUpdates">Looking for updates...</string>
    <string name="pleaseWait">Please, wait.</string>
    <string name="warning">Warning</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkOnInit">Check at initialization</string>
    <string name="checkOnInitSummary">The application will check updates when it initializes</string>
    <string name="checkMD5">Check MD5SUM</string>
    <string name="checkMD5Summary">Force MD5SUM check, it\'s highly recommended to avoid file corruption.</string>
    <string name="alert_phoneWillReboot">The device will reboot in recovery mode, do you want to proceed?</string>
    <string name="alert_md5NotFound">MD5SUM file not found</string>
    <string name="alert_md5NotFoundSummary">The integrity of the file could not be checked because the MD5SUM file is missing.\nDo you want to try to install it anyway?</string>
    <string name="updatesNotFound">No updates found.</string>
    <string name="versionNotAvailable">Version unavailable</string>
    <string name="error_connectionNotAvailable">There is not network connection, please verify if WiFi or Mobile Networks are enabled.</string>
    <string name="error_connectionProblemJson">Connection problem or bad JSON file.</string>
    <string name="error_couldNotAccessSD">Could not access SD card</string>
    <string name="error_jsonNotFound">JSON file could not be found, the application cannot check for updates</string>
    <string name="error_downloadFailed">Download failed</string>
    <string name="error_fileCorrupt">The downloaded file is corrupt, manually delete it and download it again.</string>
    <string name="error_su">ROOT access denied</string>
    <string name="folder">Updates folder</string>
    <string name="recoveryInUse">Which recovery are you using?</string>
    <string name="changeRecovery">Change recovery:</string>
    <string name="changeRecoverySummary">Change recovery in use</string>
    <string name="changelog_slider">Changelog &amp; Download</string>
</resources>
