<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">
    <ViewFlipper android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/switcher" android:background="#fff">
        <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical" android:background="#ccc">
            <ImageView android:layout_height="wrap_content" android:src="@drawable/miui_title" android:layout_width="match_parent"></ImageView>
            <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:gravity="center_horizontal" android:layout_marginTop="15dip" android:layout_width="match_parent">
                <TextView android:layout_height="wrap_content" android:textSize="16sp" android:text="@string/header_ROMs" android:textColor="#fff" android:layout_width="fill_parent" android:shadowColor="#000" android:gravity="center_horizontal" android:shadowRadius="0.5"></TextView>
                <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/found" android:gravity="center_horizontal" android:layout_marginTop="15dip" android:layout_width="match_parent">
                    <TextView android:layout_height="wrap_content" android:visibility="gone" android:text="@string/lastVersion" android:layout_width="wrap_content" android:id="@+id/ultimaVersionTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:visibility="gone" android:layout_width="wrap_content" android:id="@+id/ultimaVersion"></TextView>
                    <Spinner android:id="@+id/romsOnline" android:layout_height="wrap_content" android:layout_width="match_parent" android:clickable="false"></Spinner>
                </LinearLayout>
                <Button android:layout_height="wrap_content" android:layout_marginTop="20dip" android:layout_width="wrap_content" android:text="@string/checkUpdate_button" android:id="@+id/check_updates"></Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical" android:background="#ccc">
            <ImageView android:layout_height="wrap_content" android:src="@drawable/miui_title" android:layout_width="wrap_content"></ImageView>
            <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:gravity="center_horizontal" android:layout_marginTop="15dip" android:layout_width="match_parent">
                <TextView android:layout_height="wrap_content" android:textSize="16sp" android:text="@string/header_patches" android:textColor="#000" android:layout_width="fill_parent" android:shadowColor="#000" android:gravity="center_horizontal" android:shadowRadius="0.5"></TextView>
                <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/foundPatch" android:gravity="center_horizontal" android:layout_marginTop="15dip" android:layout_width="match_parent">
                    <Spinner android:id="@+id/parches" android:layout_height="wrap_content" android:layout_width="match_parent" android:clickable="false"></Spinner>
                </LinearLayout>
                <Button android:layout_height="wrap_content" android:layout_marginTop="20dip" android:layout_width="wrap_content" android:text="@string/searchForPatches_button" android:id="@+id/check_parches"></Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_height="fill_parent" android:background="#ccc" android:layout_width="fill_parent" android:orientation="vertical">
            <ImageView android:layout_height="wrap_content" android:src="@drawable/miui_title" android:layout_width="wrap_content"></ImageView>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_marginTop="15dip" android:layout_width="match_parent">
                <TextView android:textSize="16sp" android:layout_height="wrap_content" android:layout_width="fill_parent" android:shadowColor="#000" android:text="@string/header_offline" android:textColor="#000" android:shadowRadius="0.5" android:gravity="center_horizontal"></TextView>
                <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/romsOffline" android:layout_marginTop="15dip"></Spinner>
                <Button android:id="@+id/ApplyUpdate" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/applyUpdate" android:layout_marginTop="20dip"></Button>
            </LinearLayout>
        </LinearLayout>
	</ViewFlipper>
	<LinearLayout android:id="@+id/dots" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_marginBottom="90dip" android:layout_marginTop="10dip" android:gravity="center">
		<ImageView android:id="@+id/dot1" style="@style/dot_normal"/>		
		<ImageView android:id="@+id/dot2" style="@style/dot_normal"/>
		<ImageView android:id="@+id/dot3" style="@style/dot_normal"/>
	</LinearLayout>
	<SlidingDrawer android:id="@+id/slidingDrawer1"
	        android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:topOffset="0dip" android:handle="@+id/handler"
	        android:content="@+id/content" android:layout_alignParentTop="true">
	        <TextView android:text="Beschreibung und Download" android:gravity="center" android:textColor="#555" android:textSize="8pt" android:id="@+id/handler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/update_info_card_titlebar"/>
			<LinearLayout android:id="@+id/content" android:orientation="vertical" android:layout_width="fill_parent" android:background="#fff" android:layout_height="148dp">
			<include layout="@layout/card_layout"></include>
			</LinearLayout>
	</SlidingDrawer>
</RelativeLayout>
